# scemas-platform

./: .env.example  .gitattributes  .gitignore  .oxfmtrc.json  Cargo.toml  Dockerfile  INSTALL.md  README.md  flake.nix  package.json
.github/: README.md
.github/workflows/: ci.yml  deploy.yml  desktop-sync-check.yml  desktop.yml
crates/scemas-alerting/src/: blackboard.rs  controller.rs  dispatcher.rs  evaluator.rs
crates/scemas-cli/: Cargo.toml
crates/scemas-cli/src/: main.rs
crates/scemas-core/: Cargo.toml  build.rs
crates/scemas-core/src/: config.rs  error.rs  lib.rs  lifecycle.rs  models.rs  regions.catalog.json  (+1 more)
crates/scemas-desktop/: Cargo.toml  Tauri.toml  build.rs  tauri.conf.json
crates/scemas-desktop/src/: auth.rs  error.rs  main.rs  notifications.rs  postgres.rs  sync.rs  tray.rs
crates/scemas-desktop/src/commands/: local.rs  mod.rs  reads.rs  remote.rs
crates/scemas-desktop/src/queries/: alerts.rs  audit.rs  devices.rs  health.rs  mod.rs  public.rs  reports.rs  rules.rs  subscriptions.rs  telemetry.rs  users.rs
crates/scemas-server/: Cargo.toml
data/: hamilton-monitoring-regions.json  hamilton-sensor-catalog.json
docs/: architecture.md  codebase.md
docs/diagrams/: class_diagram.puml  data_distribution_management_controller.puml  request_environmental_data.puml  telemetry_management_controller.puml
docs/runbooks/: README.md  alerting-evaluation-failure.md  database-connection-failure.md  ingestion-failure.md  public-api-latency-degradation.md
scripts/: bundle-postgres.sh  generate-monitoring-network.ts  seed.ts  start-scemas.sh
(+8 files in other folders)
